--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/jsp/shipper/editProfile.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/shipper/register.jsp=UTF-8
