--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,14 @@
 		<filter-name>charsetFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<servlet>
 		<servlet-name>administration</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -34,7 +42,7 @@
 		<servlet-name>administration</servlet-name>
 		<url-pattern>/administration/*</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>shipper</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -44,7 +52,7 @@
 		<servlet-name>shipper</servlet-name>
 		<url-pattern>/shipper/*</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>carrier</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -55,10 +63,13 @@
 		<url-pattern>/carrier/*</url-pattern>
 	</servlet-mapping>
 
-	
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>WEB-INF/application-context.xml</param-value>
+		<param-value>
+		WEB-INF/spring-security.xml
+		WEB-INF/application-context.xml
+		</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
