--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/jsp/webapp/aboutCompany.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/webapp/charts.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/webapp/editProfile.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/webapp/login.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/webapp/navbar.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/jsp/webapp/register.jsp=UTF-8
